@@ -203,6 +203,7 @@ value *alignofOp (sym_link *);
 sym_link *typeofOp (ast *tree);
 ast *offsetofOp (sym_link * type, ast * snd);
 value *evalStmnt (ast *);
+ast *replaceAstWithTemporary (ast ** treeptr);
 ast *createRMW (ast *, unsigned, ast *);
 symbol * createFunctionDecl (symbol *);
 ast *createFunction (symbol *, ast *);
